<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                                xmlns:app="http://schemas.android.com/apk/res-auto"

                tools:context=".StatsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Team1_name"
        android:id="@+id/Team1_name"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Team1_score"
        android:id="@+id/Team1_score"
        android:layout_alignTop="@+id/Team1_ball"
        android:layout_toStartOf="@+id/Team1_ball"
        android:layout_marginEnd="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Team1_ball"
        android:id="@+id/Team1_ball"
        android:layout_marginEnd="59dp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/Team1_name"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Team1_btn"
        android:id="@+id/Team1_btn"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/Team1_score"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Team2_name"
        android:id="@+id/Team2_name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Team2_score"
        android:id="@+id/Team2_score"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/Team2_name"
        android:layout_alignStart="@+id/Team1_score"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Team2_btn"
        android:id="@+id/Team2_btn"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/Team2_score"
        android:layout_alignStart="@+id/Team1_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Team2_ball"
        android:id="@+id/Team2_ball"
        android:layout_alignTop="@+id/Team2_score"
        android:layout_toEndOf="@+id/Team1_score"/>


</RelativeLayout>