<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setting"
            android:id="@+id/setting"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:gravity="start"/>
        <View
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/darker_gray"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="false"
            android:layout_gravity="center"
            android:useDefaultMargins="true"
            android:rowCount="4"
            android:orientation="horizontal"
            android:transitionGroup="false"
            android:touchscreenBlocksFocus="false"

            android:columnCount="2"
            android:id="@+id/gridLayout"
            android:layout_centerInParent="true"
            android:layout_alignBaseline="@+id/linearLayout"
            android:rowOrderPreserved="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/team1_txtV"
                android:textSize="20sp"
                android:id="@+id/team1_txtV"
                android:layout_row="0"
                android:layout_column="0"/>

            <EditText
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/team1_txtF"
                android:layout_weight="1"
                android:hint="Enter Name"
                android:layout_row="0"
                android:layout_column="1"
                android:gravity="center"
                android:layout_gravity="center|left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/team2_txtV"
                android:textSize="20sp"
                android:id="@+id/team2_txtV"
                android:layout_row="1"
                android:layout_column="0"/>

            <EditText
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/team2_txtF"
                android:layout_weight="1"
                android:hint="Enter Name"
                android:layout_row="1"
                android:layout_column="1"
                android:gravity="center"
                android:layout_gravity="center|left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/overs_playble"
                android:textSize="20sp"
                android:id="@+id/team2_overs_playble"
                android:layout_row="2"
                android:layout_column="0"/>

            <EditText
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/overs"
                android:layout_weight="1"
                android:hint="# of Overs/Inning"
                android:layout_row="2"
                android:layout_column="1"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/num_players"
                android:textSize="20sp"
                android:layout_row="3"
                android:layout_column="0"/>

            <EditText
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/num_total_player"
                android:layout_weight="1"
                android:hint="# of Players playing"
                android:layout_row="3"
                android:layout_column="1"
                android:gravity="center"
                />
        </GridLayout>

    </LinearLayout>


</RelativeLayout>
